Release candidate of bingo